<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusedByDefault="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_readtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/start_read"
        android:textColor="#388E3C"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_portspeed"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@+id/editText_portspeed"
        app:layout_constraintTop_toBottomOf="@+id/editText_portspeed" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/camera_open"
        app:layout_constraintBottom_toTopOf="@+id/editText_width"
        app:layout_constraintEnd_toStartOf="@+id/button_temp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tp_show"
        app:layout_constraintBottom_toBottomOf="@+id/button_camera"
        app:layout_constraintEnd_toStartOf="@+id/button_speak"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="@+id/button_camera" />

    <Button
        android:id="@+id/button_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_open"
        app:layout_constraintBottom_toBottomOf="@+id/button_temp"
        app:layout_constraintEnd_toStartOf="@+id/button_lang"
        app:layout_constraintStart_toEndOf="@+id/button_temp"
        app:layout_constraintTop_toTopOf="@+id/button_temp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_restart_useful"
        app:layout_constraintBottom_toBottomOf="@+id/editText_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_height"
        app:layout_constraintTop_toTopOf="@+id/editText_height" />

    <EditText
        android:id="@+id/editText_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="@string/fw_height"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText_height"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fw_height"
        android:focusedByDefault="false"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editText_width"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintStart_toEndOf="@+id/editText_width"
        app:layout_constraintTop_toTopOf="@+id/editText_width" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sp_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="32dp"
        android:text="ttyS3"
        app:layout_constraintBottom_toTopOf="@+id/editText_portspeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_portspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="@string/baudrate_9600"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView_sp"
        app:layout_constraintStart_toStartOf="@+id/textView_sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_sp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/exit_app"
        android:textColor="#FF3333"
        app:layout_constraintEnd_toEndOf="@+id/button_readtemp"
        app:layout_constraintStart_toStartOf="@+id/button_readtemp"
        app:layout_constraintTop_toBottomOf="@+id/button_readtemp" />

    <Button
        android:id="@+id/button_restorecamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/reset_fw_side"
        app:layout_constraintEnd_toEndOf="@+id/button_exit"
        app:layout_constraintStart_toStartOf="@+id/button_exit"
        app:layout_constraintTop_toBottomOf="@+id/button_exit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:text="@string/outside_hint"
        app:layout_constraintEnd_toEndOf="@+id/button_restorecamera"
        app:layout_constraintStart_toStartOf="@+id/button_restorecamera"
        app:layout_constraintTop_toBottomOf="@+id/button_restorecamera" />

    <EditText
        android:id="@+id/editText_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:visibility="invisible"
        android:hint="体温异常下限：默认37.3℃"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_camera"
        app:layout_constraintStart_toStartOf="@+id/button_camera" />

    <Button
        android:id="@+id/button_tempset"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="设定"
        app:layout_constraintBottom_toBottomOf="@+id/editText_temp"
        app:layout_constraintStart_toEndOf="@+id/editText_temp"
        app:layout_constraintTop_toTopOf="@+id/editText_temp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_and_exit"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_chinese"
        app:layout_constraintBottom_toBottomOf="@+id/button_speak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_speak"
        app:layout_constraintTop_toTopOf="@+id/button_speak" />

    <Button
        android:id="@+id/button_speakpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_xunfei_ui"
        android:textColor="#D32F2F"
        app:layout_constraintBottom_toTopOf="@+id/button_speak"
        app:layout_constraintEnd_toEndOf="@+id/button_speak"
        app:layout_constraintStart_toStartOf="@+id/button_speak" />

</android.support.constraint.ConstraintLayout>